test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/assign_to_incomplete_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[27]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  identifier(x)
  ;
  extern
  struct
  identifier(s)
  identifier(y)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  =
  identifier(y)
  ;
  return
  const int(0)
  ;
  }
